--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -346,7 +346,25 @@ h2 img{
 
 @media all and (max-width: 740px) {
    .wrapper, .nav_wrapper{
-		width: 600px;
+		width: 100%;
+	}
+
+	.text_box{
+		width: 94%;
+		height: auto;
+	}
+
+	.box{
+		width: 46%;
+		margin-right: 10px;
+	}
+
+	.box img{
+		margin-left: 12%;
+	}
+
+	.detail_button{
+		width: 100%;
 	}
 }
 
