--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -143,6 +143,10 @@ h3{
 	margin: 5px;
 	-webkit-box-shadow:  0px 0px 2px 2px rgba(17,207,188,0.2);    
     box-shadow:  0px 0px 2px 2px rgba(17,207,188,0.2);
+    -webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);	
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
 }
 
 .box, .detail_button{
@@ -153,6 +157,10 @@ h3{
 }
 
 .box:hover{
+	-webkit-filter: grayscale(0%);
+	-moz-filter: grayscale(0%);	
+	-ms-filter: grayscale(0%);
+	-o-filter: grayscale(0%);
 	-webkit-box-shadow:  0px 0px 4px 4px rgba(0,0,0,0.0);    
     box-shadow:  0px 0px 4px 4px rgba(0,0,0,0.0);
     background-color: rgba(17,207,188,0.2);
@@ -384,6 +392,10 @@ and (max-device-width: 480px) {
 	.box{
 		width: 46%;
 		margin-right: 10px;
+		-webkit-filter: grayscale(0%);
+		-moz-filter: grayscale(0%);	
+		-ms-filter: grayscale(0%);
+		-o-filter: grayscale(0%);
 	}
 
 	.box img{
