--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -381,23 +381,26 @@ h2 img{
 and (min-device-width: 320px)
 and (max-device-width: 480px) {
     .wrapper, .nav_wrapper{
-		width: 100%;
+		width: 95%;
+		margin: 0 auto;
 	}
 
 	h1{
 		font-size: 4em;
+		margin-left: 2%;
 	}
 
 	.text_box{
-		width: 94%;
+		width: 100%;
 		height: auto;
-		font-size: 1.8em;
+		font-size: 2.8em; 
 	}
 
 	.box{
-		width: 46%;
-		height: 80%;
+		width: 100%;
+		height: 100%;
 		margin-right: 10px;
+		margin-bottom: 5%;
 		-webkit-filter: grayscale(0%);
 		-moz-filter: grayscale(0%);	
 		-ms-filter: grayscale(0%);
@@ -405,12 +408,17 @@ and (max-device-width: 480px) {
 	}
 
 	.box img{
-		margin-left: 12%;
-		width: 85%;
+		width: 100%;
+		zoom: 300%;
+		margin-left: 10%;
+		display: block;
 	}
 
 	.detail_button{
 		width: 100%;
+		font-size: 2em;
+		display: block;
+		opacity: 1 !important;
 	}
 }
 
